--- a/conf/bblayers.conf
+++ b/conf/bblayers.conf
@@ -11,7 +11,7 @@ BBLAYERS = " \
   ${BSPDIR}/sources/meta-openembedded/meta-oe \
   ${BSPDIR}/sources/meta-openembedded/meta-multimedia \
   \
-  ${BSPDIR}/sources/meta-fsl-arm \
+  ${BSPDIR}/sources/meta-freescale \
   ${BSPDIR}/sources/meta-fsl-arm-extra \
   ${BSPDIR}/sources/meta-fsl-demos \
 "
